--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 source venv/Scripts/activate
 source ~/.profile
 export APP_SETTINGS="config.DevelopmentConfig"
+export DATABASE_URL="postgresql://localhost/wordcount_dev"
