--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 flask = "==0.10.1"
 gunicorn = "==19.4.5"
+psycopg2 = "==2.7.1"
+flask-sqlalchemy = "==2.1"
+flask-migrate = "==1.8.0"
 
 [requires]
 python_version = "3.5"
