--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 source venv/Scripts/activate
 source ~/.profile
 export APP_SETTINGS="config.DevelopmentConfig"
-export DATABASE_URL="postgresql://localhost/wordcount_dev"
+export DATABASE_URL="postgresql://postgres:kipnit24@localhost:5432/wordcount_dev"
