--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 flask = "==0.10.1"
 gunicorn = "==19.4.5"
-psycopg2 >= "==2.7,<2.8 --no-binary psycopg2"
+psycopg2 = "==2.8 --no-binary psycopg2"
 flask-sqlalchemy = "==2.1"
 flask-migrate = "==1.8.0"
 
