--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==0.10.1
 gunicorn==19.4.5
-psycopg2==2.8 --no-binary 
+psycopg2==2.8 --no-binary psycopg2
 flask-sqlalchemy==2.1
 flask-migrate==1.8.0
 
