--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
-flask==0.10.1
+alembic==1.0.10
+beautifulsoup4==4.4.1
+certifi==2019.3.9
+Flask==0.10.1
+Flask-Migrate==1.8.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.1
 gunicorn==19.4.5
-psycopg2==2.8 --no-binary psycopg2
-flask-sqlalchemy==2.1
-flask-migrate==1.8.0
-
+itsdangerous==1.1.0
+Jinja2==2.10.1
+Mako==1.0.10
+MarkupSafe==1.1.1
+nltk==3.2
+pipenv==2018.11.26
+psycopg2==2.8.2
+python-dateutil==2.8.0
+python-editor==1.0.4
+requests==2.9.1
+six==1.12.0
+SQLAlchemy==1.3.3
+virtualenv==16.5.0
+virtualenv-clone==0.5.3
+Werkzeug==0.15.2
