--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.0.10
 beautifulsoup4==4.4.1
 certifi==2019.3.9
+Click==7.0
 Flask==0.10.1
 Flask-Migrate==1.8.0
 Flask-Script==2.0.6
@@ -15,7 +16,9 @@ pipenv==2018.11.26
 psycopg2==2.8.2
 python-dateutil==2.8.0
 python-editor==1.0.4
+redis==2.10.6
 requests==2.9.1
+rq==0.5.6
 six==1.12.0
 SQLAlchemy==1.3.3
 virtualenv==16.5.0
